# PyBlas

./: CMakeLists.txt  LICENSE  README.md  setup.py
src/pyblas/: __init__.py  common.py  level3.cpp
test/: conftest.py  test_hemm.py  test_her2k.py  test_herk.py  test_symm.py  test_syr2k.py  test_trmm.py  test_trsm.py
test/level3/: test_gemm.py  test_syrk.py
